# Stellar-Royalty-Distribution-System

./: .deployment-metadata.json  .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  rewrite.bat  sync_repos.ps1  sync_repos2.ps1
.github/workflows/: ci.yml
contracts/: Cargo.toml  README.md
contracts/payment-distributor/: Cargo.toml
contracts/payment-distributor/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/payment-distributor/test_snapshots/test/: test_agreement_payments_tracking.1.json  test_cross_contract_registry_update.1.json  test_distribute_payment.1.json  test_payment_to_inactive_agreement_fails.1.json
contracts/royalty-registry/: Cargo.toml
contracts/royalty-registry/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/royalty-registry/test_snapshots/test/: test_create_agreement.1.json  test_invalid_shares.1.json  test_state_transitions.1.json  test_update_agreement_recipients.1.json  test_user_agreements_tracking.1.json
docs/: DEPLOYMENT.md  SECURITY.md
frontend/: .gitignore  README.md  debug_modal.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  test-tx.ts  test2.js  tsconfig.tsbuildinfo  vitest.config.ts  vitest.integration.config.ts
frontend/__tests__/: transactions.test.ts  utils.test.ts  wallet.test.tsx
frontend/__tests__/integration/: contract-flow.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/providers/: Providers.tsx
scripts/: deploy-testnet.sh  setup-toolchain.sh  upgrade-contract.sh
(+21 files in other folders)
