[package]
name = "payment-distributor"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
royalty-registry = { path = "../royalty-registry" }

[features]
testutils = ["soroban-sdk/testutils"]
